<?xml version="1.0"?>
<package format="3">
  <name>ros_map_mqtt_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 /map (OccupancyGrid) -> grayscale PNG via HTTP -> MQTT map_state publisher</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>

  <!-- OpenCV for PNG writing -->
  <build_depend>opencv4</build_depend>
  <exec_depend>opencv4</exec_depend>

</package>
