<?xml version="1.0"?>
<package format="3">
  <name>ros_motor_uart_bridge</name>
  <version>0.0.1</version>
  <description>ROS cmd_vel -> (UART to STM32) + (MQTT robot/motor_cmd to GUI)</description>

  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
